# fast-api-async

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  schemas.py  services.py  views.py
db/postgres/: connection.py  init.py  models.py
rest_client/: teste.http
